--- a/asm/trafficdirector/td-configmap-galley.yaml
+++ b/asm/trafficdirector/td-configmap-galley.yaml
@@ -17,6 +17,7 @@ data:
   AUDIENCE: "[PROJECT_ID].svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.trust-domain"}
   trustDomain: "[PROJECT_ID].svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.trust-domain"}
   TRUST_DOMAIN: "[PROJECT_ID].svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.trust-domain"}
+  GCP_LOCATION: "us-central1-c" # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.compute.location"}
   GCP_GKE_CLUSTER_URL: https://container.googleapis.com/v1/projects/[PROJECT_ID]/locations/us-central1-c/clusters/asm-free-trial # {"$ref":"#/definitions/io.k8s.cli.substitutions.gke-cluster-url"}
   GKE_CLUSTER_URL: https://container.googleapis.com/v1/projects/[PROJECT_ID]/locations/us-central1-c/clusters/asm-free-trial # {"$ref":"#/definitions/io.k8s.cli.substitutions.gke-cluster-url"}
   gkeClusterUrl: https://container.googleapis.com/v1/projects/[PROJECT_ID]/locations/us-central1-c/clusters/asm-free-trial # {"$ref":"#/definitions/io.k8s.cli.substitutions.gke-cluster-url"}
