--- a/asm/trafficdirector/kustomization.yaml
+++ b/asm/trafficdirector/kustomization.yaml
@@ -3,11 +3,14 @@ kind: Kustomization
 
 resources:
 - ./crd-all.gen.yaml
-- ./td-configmap-mesh.yaml
-- ./td-istiod-asm-rbac.yaml
-- ./td-galley-rbac.yaml
-- ./td-configmap-injection.yaml
-- ./td-istiod-asm.yaml
+- ./roles.yaml
+- ./neg-controller-config.yaml
 - ./td-configmap-galley.yaml
-- ./td-mutatingwebhook.yaml
+- ./td-configmap-injection.yaml
+- ./td-configmap-mesh.yaml
+- ./td-galley-rbac.yaml
 - ./td-galley.yaml
+- ./td-gateway.yaml
+- ./td-istiod-asm-rbac.yaml
+- ./td-istiod-asm.yaml
+- ./td-mutatingwebhook.yaml
