--- a/citadel-patch/kustomization.yaml
+++ b/citadel-patch/kustomization.yaml
@@ -15,7 +15,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- ../cluster
+- ../asm/cluster # {"$ref":"#/definitions/io.k8s.cli.setters.base-dir"}
 patches:
 - path: citadel-patch.yaml
   target:
