--- a/asm-patch-citadel/patches/nodepool-patch.yaml
+++ b/asm-patch-citadel/patches/nodepool-patch.yaml
@@ -12,7 +12,16 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
-resources:
-- istio-operator.yaml
+apiVersion: container.cnrm.cloud.google.com/v1beta1
+kind: ContainerNodePool
+metadata:
+  annotations:
+    gke.io/cluster: "bootstrap://"
+  name: default-pool
+  namespace: "PROJECT_ID" # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.core.project"}
+spec:
+  clusterRef:
+    name: asm-cluster # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.container.cluster"}
+  nodeConfig:
+    workloadMetadataConfig:
+      nodeMetadata: GKE_METADATA_SERVER
