--- a/asm-multiproject/cluster/cluster.yaml
+++ b/asm-multiproject/cluster/cluster.yaml
@@ -35,5 +35,9 @@ spec:
   monitoringService: monitoring.googleapis.com/kubernetes
   network: default # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.compute.network"}
   subnetwork: default # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.compute.subnetwork"}
+  ipAllocationPolicy:
+    properties:
+      clusterSecondaryRangeName: ""  # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.compute.network.clusterSecondaryRange"}
+      servicesSecondaryRangeName: ""  # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.compute.network.servicesSecondaryRange"}
   releaseChannel:
     channel: REGULAR # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.container.cluster.releaseChannel"}
