--- a/asm-multiproject/cluster/cluster.yaml
+++ b/asm-multiproject/cluster/cluster.yaml
@@ -27,10 +27,8 @@ spec:
     mesh_id: "proj-PROJECT_NUMBER" # {"$ref":"#/definitions/io.k8s.cli.substitutions.mesh-id"}
   loggingService: logging.googleapis.com/kubernetes
   monitoringService: monitoring.googleapis.com/kubernetes
-  networkRef: 
-    external: default # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.compute.network"}
-  subnetworkRef: 
-    external: default # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.compute.subnetwork"}
+  network: default # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.compute.network"}
+  subnetwork: default # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.compute.subnetwork"}
   releaseChannel:
     channel: REGULAR # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.container.cluster.releaseChannel"}
   ipAllocationPolicy:
