--- a/asm-citadel/istio-citadel/istio-operator.yaml
+++ b/asm-citadel/istio-citadel/istio-operator.yaml
@@ -28,6 +28,8 @@ spec:
         env:
         - name: SPIFFE_BUNDLE_ENDPOINTS
           value: ""
+        - name: TOKEN_AUDIENCES
+          value: "istio-ca,PROJECT_ID.svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.token-audiencesn"}
   meshConfig:
     defaultConfig:
       proxyMetadata:
@@ -45,9 +47,7 @@ spec:
       # Enable SDS
       sds:
         token:
-          aud: "istio-ca"
+          aud: "PROJECT_ID.svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.trust-domain"}
       multiCluster:
         # Provided to ensure a human readable name rather than a UUID.
         clusterName: "PROJECT_ID/us-central1-c/asm-cluster" # {"$ref":"#/definitions/io.k8s.cli.substitutions.cluster-name"}
-      sts:
-        servicePort: 0
