--- a/asm-multiproject-patch/resources/kustomization.yaml
+++ b/asm-multiproject-patch/resources/kustomization.yaml
@@ -1,6 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- project/namespace.yaml
 - project/enable-services.yaml
-- istio/istio-operator.yaml
+- istio-multiproject/istio-operator.yaml
