--- a/asm-patch-citadel/resources/istio-operator.yaml
+++ b/asm-patch-citadel/resources/istio-operator.yaml
@@ -28,7 +28,7 @@ spec:
         - name: SPIFFE_BUNDLE_ENDPOINTS
           value: ""
         - name: TOKEN_AUDIENCES
-          value: "istio-ca,PROJECT_ID.svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.token-audiencesn"}
+          value: "istio-ca,PROJECT_ID.svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.token-audiences"}
   meshConfig:
     defaultConfig:
       proxyMetadata:
