Add packages to support multiproject profile (#117)
* add kpt package for multiproject profile

* add pkg for multiproject patch

* add kustomize files

* fix kustomize files

Co-authored-by: Yuan Yan <yuanyan@google.com>

--- a/pkg/Makefile
+++ b/pkg/Makefile
@@ -8,3 +8,10 @@ all:
 	# Update asm-patch/
 	cp -rf cluster-patches Kptfile ../asm-patch/
 	cp -rf istio project ../asm-patch/resources/
+
+	# Update asm-multiproject/
+	cp -rf cluster istio-multiproject project Kptfile ../asm-multiproject
+
+	# Update asm-multiproject-patch/
+	cp -rf cluster-patches Kptfile ../asm-multiproject-patch/
+	cp -rf istio-multiproject project ../asm-multiproject-patch/resources/
