--- a/asm-multiproject-patch/resources/kustomization.yaml
+++ b/asm-multiproject-patch/resources/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- project/enable-services.yaml
-- istio-multiproject/istio-operator.yaml
+- namespace.yaml
+- enable-services.yaml
+- istio-operator.yaml
