--- a/asm-patch-citadel/patches/nodepool-patch.yaml
+++ b/asm-patch-citadel/patches/nodepool-patch.yaml
@@ -12,12 +12,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: container.cnrm.cloud.google.com/v1alpha2
+apiVersion: container.cnrm.cloud.google.com/v1beta1
 kind: ContainerNodePool
 metadata:
   annotations:
-    cnrm.cloud.google.com/project-id: "PROJECT_ID" # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.core.project"}
+    gke.io/cluster: "bootstrap://"
   name: default-pool
+  namespace: "PROJECT_ID" # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.core.project"}
 spec:
   clusterRef:
     name: asm-cluster # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.container.cluster"}
