move multiproject.yaml to options folder

--- a/pkg/Makefile
+++ b/pkg/Makefile
@@ -3,8 +3,8 @@
 # Update pkgs: asm, asm-patch, asm-citadel, asm-patch-citadel
 all:
 	# Update asm/
-	cp -rf cluster istio project Kptfile ../asm/
+	cp -rf cluster istio project options Kptfile ../asm/
 
 	# Update asm-patch/
 	cp -rf cluster-patches Kptfile ../asm-patch/
-	cp -rf istio project ../asm-patch/resources/
+	cp -rf istio project options ../asm-patch/resources/
