--- a/pkg/Makefile
+++ b/pkg/Makefile
@@ -1,10 +1,10 @@
 .PHONY: all
 
-# Update pkgs: asm, asm-patch, asm-citadel, asm-patch-citadel
+# Update pkgs: asm, asm-patch
 all:
 	# Update asm/
 	cp -rf cluster istio project options Kptfile ../asm/
 
 	# Update asm-patch/
 	cp -rf cluster-patches Kptfile ../asm-patch/
-	cp -rf istio project options ../asm-patch/resources/
+	cp -rf project ../asm-patch/resources/
