--- a/pkg/options/citadelca.yaml
+++ b/pkg/options/citadelca.yaml
@@ -23,17 +23,23 @@ spec:
       k8s:
         env:
         - name: SPIFFE_BUNDLE_ENDPOINTS
-          value: "PROJECT_ID.svc.id.goog|https://storage.googleapis.com/mesh-ca-resources/spiffe_bundle.json" # {"$ref":"#/definitions/io.k8s.cli.substitutions.spiffe-bundle-endpoints"}
+          value: ""
+        - name: TOKEN_AUDIENCES
+          value: "istio-ca,PROJECT_ID.svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.token-audiences"}
         - name: ENABLE_STACKDRIVER_MONITORING
           value: "true" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.controlplane.monitoring.enabled"}
   meshConfig:
     defaultConfig:
       proxyMetadata:
+        TRUST_DOMAIN: "cluster.local"
+        CA_PROVIDER: "Citadel"
+        PLUGINS: ""
         GCE_METADATA_HOST: "metadata.google.internal"
-        TRUST_DOMAIN: "PROJECT_ID.svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.trust-domain"}
   values:
     global:
-      trustDomain: "PROJECT_ID.svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.trust-domain"}
+      trustDomain: "cluster.local"
+      caAddress: ""
+      pilotCertProvider: "istiod"
       # Enable SDS
       sds:
         token:
