--- a/pkg/Makefile
+++ b/pkg/Makefile
@@ -3,7 +3,7 @@
 # Update pkgs: asm, asm-patch
 all:
 	# Update asm/
-	cp -rf cluster istio project options Kptfile ../asm/
+	cp -rf cluster istio project Kptfile ../asm/
 
 	# Update asm-patch/
 	cp -rf cluster-patches Kptfile ../asm-patch/
