--- a/pkg/istio-citadel/istio-operator.yaml
+++ b/pkg/istio-citadel/istio-operator.yaml
@@ -21,17 +21,17 @@ metadata:
 spec:
   profile: asm-gcp # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.profile"}
   hub: gcr.io/gke-release/asm # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.hub"}
-  tag: 1.6.5-asm.7 # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.tag"}
+  tag: 1.7.0-asm.0 # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.tag"}
   components:
     pilot:
       k8s:
         env:
         - name: SPIFFE_BUNDLE_ENDPOINTS
           value: ""
-        - name: TOKEN_AUDIENCES
-          value: "istio-ca,PROJECT_ID.svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.token-audiences"}
         - name: ENABLE_STACKDRIVER_MONITORING
           value: "true" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.controlplane.monitoring.enabled"}
+        - name: TOKEN_AUDIENCES
+          value: "istio-ca,PROJECT_ID.svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.token-audiences"}
   meshConfig:
     defaultConfig:
       proxyMetadata:
@@ -44,7 +44,7 @@ spec:
     global:
       meshID: "proj-PROJECT_NUMBER" # {"$ref":"#/definitions/io.k8s.cli.substitutions.mesh-id"}
       trustDomain: "cluster.local"
-      caAddress: "istiod.istio-system.svc:15012"
+      caAddress: ""
       pilotCertProvider: "istiod"
       # Enable SDS
       sds:
