Revert "Update multiproject (#131)"
This reverts commit 579f4d8bb7b313594940f737f704d9b74eb0ebb5.

--- a/pkg/istio-citadel/istio-operator.yaml
+++ b/pkg/istio-citadel/istio-operator.yaml
@@ -29,7 +29,7 @@ spec:
         - name: SPIFFE_BUNDLE_ENDPOINTS
           value: ""
         - name: TOKEN_AUDIENCES
-          value: "istio-ca,PROJECT_ID.svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.token-audiences"}
+          value: "istio-ca,PROJECT_ID.svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.token-audiencesn"}
         - name: ENABLE_STACKDRIVER_MONITORING
           value: "true" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.controlplane.monitoring.enabled"}
   meshConfig:
