Clean up GCP resources better (#151)
Sometimes removing GKE resources doesn't also release underlying external load balancing resources. This commit introduces logic in the script and cleanup job to catch this.

--- a/scripts/asm-installer/cloudbuild.yaml
+++ b/scripts/asm-installer/cloudbuild.yaml
@@ -74,8 +74,26 @@ steps:
     --project "${PROJECT_ID}" \
     --format='value[separator="|"](name,createTime,zone)')
     EOF
+
+    while read -r LB_NAME; do
+      gcloud compute \
+        --project "${PROJECT_ID}" \
+        forwarding-rules delete -q "$${LB_NAME}" \
+        --region "$${CLUSTER_LOCATION:0:-2}" || true
+      gcloud compute \
+        --project "${PROJECT_ID}" \
+        target-pools delete -q "$${LB_NAME}" \
+        --region "$${CLUSTER_LOCATION:0:-2}" || true
+    done <<EOF
+    $(gcloud compute forwarding-rules list \
+    --project="${PROJECT_ID}" \
+    --format='get(name)' \
+    --filter='((description:istio OR description:frontend-external) AND creationTimestamp<-PT3H)')
+    EOF
   waitFor:
   - 'fetch-secrets'
+  env:
+  - 'CLUSTER_LOCATION=${_CLUSTER_LOCATION}'
 
 - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
   dir: 'scripts/asm-installer'
