Add doc blocks for YAML

--- a/asm/istio/options/egressgateways.yaml
+++ b/asm/istio/options/egressgateways.yaml
@@ -12,6 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# [START docs]
 apiVersion: install.istio.io/v1alpha1
 kind: IstioOperator
 spec:
@@ -19,3 +20,4 @@ spec:
     egressGateways:
     - name: istio-egressgateway
       enabled: true
+# [END docs]
