--- a/asm/istio/options/cni-gcp.yaml
+++ b/asm/istio/options/cni-gcp.yaml
@@ -12,6 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# [START docs]
 apiVersion: install.istio.io/v1alpha1
 kind: IstioOperator
 spec:
@@ -25,3 +26,4 @@ spec:
       excludeNamespaces:
       - istio-system
       - kube-system
+# [END docs]
