--- a/asm/istio/options/cni-onprem.yaml
+++ b/asm/istio/options/cni-onprem.yaml
@@ -12,6 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# [START docs]
 apiVersion: install.istio.io/v1alpha1
 kind: IstioOperator
 spec:
@@ -26,3 +27,4 @@ spec:
       - istio-system
       - kube-system
       - gke-system
+# [END docs]
