--- a/asm/istio/options/envoy-access-log.yaml
+++ b/asm/istio/options/envoy-access-log.yaml
@@ -12,8 +12,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# [START docs]
 apiVersion: install.istio.io/v1alpha1
 kind: IstioOperator
 spec:
   meshConfig:
     accessLogFile: "/dev/stdout"
+# [END docs]
