--- a/asm/istio/options/internal-load-balancer.yaml
+++ b/asm/istio/options/internal-load-balancer.yaml
@@ -12,6 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# [START docs]
 apiVersion: install.istio.io/v1alpha1
 kind: IstioOperator
 spec:
@@ -30,3 +31,4 @@ spec:
             port: 80
           - name: https
             port: 443
+# [END docs]
