workaround for https://github.com/istio/istio/issues/28763

--- a/asm-iap/cluster/istio-operator.yaml
+++ b/asm-iap/cluster/istio-operator.yaml
@@ -27,6 +27,8 @@ spec:
     - enabled: true
       name: istio-ingressgateway
       k8s:
+        hpaSpec:
+          minReplicas: 2
         service:
           type: NodePort
           ports:
