--- a/asm/identity-provider/identityprovider-crd.yaml
+++ b/asm/identity-provider/identityprovider-crd.yaml
@@ -3,11 +3,11 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.2
+    controller-gen.kubebuilder.io/version: (unknown)
   creationTimestamp: null
-  name: identityproviders.security.anthos.io
+  name: identityproviders.security.cloud.google.com
 spec:
-  group: security.anthos.io
+  group: security.cloud.google.com
   names:
     kind: IdentityProvider
     listKind: IdentityProviderList
